--- a/notes/05_infomax/0_ica_intro.tex
+++ b/notes/05_infomax/0_ica_intro.tex
@@ -57,7 +57,7 @@ In the case of $N=2$:
 			x_1 \\ x_2
 		\end{array} \right)
 	= \left( \begin{array}{l}
-		w_{11} \hat s_1 + w_{12} \hat s_2 \\ w_{21} \hat s_1 + w_{22} \hat s_2
+		w_{11} x_1 + w_{12} x_2 \\ w_{21} x_1 + w_{22} x_2
 	\end{array} \right)
 \end{equation}
 
@@ -157,7 +157,7 @@ From this follows:
 \E  \lbrack \, g(x) h(y) \, \rbrack = \E \lbrack g(x) \rbrack \, \E \lbrack h(y) \rbrack  \,,
 \end{equation}
 
-where $g(x)$ and $h(y)$ are absolutely integrable functions of $Y$ and $Y$.
+where $g(x)$ and $h(y)$ are absolutely integrable functions of $X$ and $Y$.
 }
 \only<2>{
 
