--- a/notes/05_infomax/1_primer_info_theory.tex
+++ b/notes/05_infomax/1_primer_info_theory.tex
@@ -326,7 +326,7 @@ In spite of this being a justified approach for blind source separation, it requ
 \begin{frame}{\subsecname}
 
 \begin{itemize}
-\item (differential) entropy $H(X)$ represents our uncertainty about $X$ 
+\item (differential) entropy $h(X)$ represents our uncertainty about $X$ 
 and 
 \item the conditional (differential) entropy $h(X|Y)$ represents such \textbf{after} observing $Y$.
 \end{itemize}
