--- a/notes/05_infomax/3_cost.tex
+++ b/notes/05_infomax/3_cost.tex
@@ -6,7 +6,7 @@
         \secname
     \end{center}
     \begin{center}
-    Minimize the cost function using training data.
+    Optimize the cost function using training data.
     \end{center}
 \end{frame}
 }
