--- a/notes/06_fastica/tutorial.tex
+++ b/notes/06_fastica/tutorial.tex
@@ -62,10 +62,38 @@
 \newpage
 
 \mode<all>
-\input{./1_pcaica}
+\input{./0_recap_ica_whitening}
 \mode*
 
 \clearpage
+
+\mode<all>
+\input{./1_ica_ambiguous}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./2_pcaica}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./3_badgaussians}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./4_kurt}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./5_fastica}
+\mode*
 
 %\section{References}
 %\begin{frame}[allowframebreaks] \frametitle{References}
