--- a/notes/06_fastica/4_kurt.tex
+++ b/notes/06_fastica/4_kurt.tex
@@ -1,5 +1,17 @@
-\begin{frame}
-\frametitle{Maximizing nongaussianity leads to independent sources}
+\section{ICA by maximizing nongaussianity}
+
+\mode<presentation>{
+\begin{frame} 
+    \begin{center} \huge
+        \subsecname
+    \end{center}
+    \begin{center}
+    Maximizing nongaussianity leads to independent sources
+    \end{center}
+\end{frame}
+}
+
+\begin{frame}{Maximizing nongaussianity leads to independent sources}
 
 \textbf{The setting:}\\
 
