--- a/notes/06_fastica/0_recap_ica_whitening.tex
+++ b/notes/06_fastica/0_recap_ica_whitening.tex
@@ -1,6 +1,6 @@
 
 \section{The ICA Problem}
-\begin{frame}
+\begin{frame}{\secname}
 
 independent sources: $\vec s = (s_1, s_2,...,s_N)^\top \in \R^N$\\
 observations: $\vec x \in \R^N$
@@ -11,7 +11,7 @@ observations: $\vec x \in \R^N$
 \end{equation}
 
 \begin{equation}
-\widehat{\vec s} = \vec W \cdot \vec x
+\widehat{\vec s} = \vec W \vec x
 \end{equation}
 
 Methods for solving the ICA problem:
@@ -44,9 +44,9 @@ Methods for solving the ICA problem:
 
 \newpage
 
-\section{Whitening}
+\section{Whitening revisited}
 
-\begin{frame}
+\begin{frame}{\secname}
 
 \notesonly{
 The purpose of whitening is to decorrelate the data.
@@ -75,22 +75,31 @@ The whitening transformation yields:
 \vec v^{(\alpha)} = \vec \Lambda^{-\frac{1}{2}} \vec M^\top \vec x^{(\alpha)}
 \end{equation}
 
-where $\vec M = (\vec e_1, \vec e_2, \ldots,\vec e_N)$
-\notesonly{
-and $\vec \Lambda^{-\frac{1}{2}}$ is a diagonal matrix containig the square roots of the corresponding eigenvalues.
-}
+where
+\begin{itemize}
+\item[] $\vec M = (\vec e_1, \vec e_2, \ldots,\vec e_N)$ is the orthonormal eigenbasis of $\Sigma_x$
+\item[] and $\vec\Lambda$ is diagonal matrix with the corresponding eigenvalues.
+\end{itemize}
+
+\pause
+
+\question{What do we know about the variables in $\vec v$?}
+
+\pause
+
 \begin{equation}
 \label{eq:covw}
 \vec \Sigma_v = \mathrm{Cov}(\vec v) = \E \lbrack \, \vec v \, \vec v^\top \rbrack = \vec I_N
 \end{equation}
 
 \notesonly{
-Uncorrelted means zero covariance. Therefore, the covariance matrix for uncorrelated data is a diagonal matrix because it only contains the variances of the individual variables. 
+Uncorrelated means zero covariance. Therefore, the covariance matrix for uncorrelated data is a diagonal matrix because it only contains the variances of the individual variables. 
 Whitening decorrelates the variables and normalizes the variances to 1.
 }
 \end{frame}
 
-\begin{frame}
+\begin{frame}{\secname}
+
 \begin{figure}[ht]
 \label{fig:sphering}
 \includegraphics[width=12cm]{img/cov.png}
