--- a/notes/06_fastica/1_ica_ambiguous.tex
+++ b/notes/06_fastica/1_ica_ambiguous.tex
@@ -42,7 +42,7 @@ P_{s_1, s_2}(\widehat {\vec s}) \eqexcl  P_{s_1} (\widehat{s}_1) \cdot P_{s_2} (
 \end{frame}
 
 \notesonly{
-We can verify that ambiuities to scale and permutation do not interfere with statistical independence.
+We can verify that ambiguities to scale and permutation do not interfere with statistical independence.
 }
 
 \begin{frame}{Verification}
