--- a/notes/06_fastica/3_badgaussians.tex
+++ b/notes/06_fastica/3_badgaussians.tex
@@ -144,7 +144,7 @@ Further details can be found in Hyv{\"a}rinen Ch. 2.5.
 }
 }
 
-A mixture of sources where at most one is Gaussian, is still fine. It only becomes a problem when we have more than one.
+A mixture of sources where, at most, one is Gaussian, can still be separated by ICA. It only becomes a problem when we have more than one Gaussian.
 
 
 \slidesonly{
@@ -153,7 +153,7 @@ A mixture of sources where at most one is Gaussian, is still fine. It only becom
 \svspace{5mm}
 
 \begin{itemize}
-\item Mixing 2 independent Gaussians leads to a joint mixed distribution ${P}_{\vec x}(\vec x)$ that is effectively equal to the joint distribution of the original sources ${P}_{\vec s}(\vec s)$.
+\item Mixing two independent Gaussians leads to a joint mixed distribution ${P}_{\vec x}(\vec x)$ that is effectively equal to the joint distribution of the original sources ${P}_{\vec s}(\vec s)$.
 \pause
 \item No surprise: \emph{uncorrelated jointly Gaussian variables are necessarily independent.}
 \pause
