--- a/notes/06_fastica/4_kurt.tex
+++ b/notes/06_fastica/4_kurt.tex
@@ -3,7 +3,7 @@
 \mode<presentation>{
 \begin{frame} 
     \begin{center} \huge
-        \subsecname
+        \secname
     \end{center}
     \begin{center}
     Maximizing nongaussianity leads to independent sources
@@ -11,7 +11,17 @@
 \end{frame}
 }
 
-\begin{frame}{Maximizing nongaussianity leads to independent sources}
+\begin{frame}{Maximizing nongaussianity}
+
+\begin{block}{Intuition from the Central Limit Theorem}
+\emph{The distribution of the sum of independent random variables is ''more Gaussian'' than the original distributions of the random variables.}\\\vspace{2mm}
+Searching for the direction of maximum deviation from a Gaussian distribution may recover the original sources.
+\end{block}
+\end{frame}
+
+
+
+\begin{frame}{The setting}
 
 \textbf{The setting:}\\
 
